# cmd/sso/router/chi_router.go
@@ -1,6 +1,7 @@
 package router
 
 import (
+	"compress/gzip"
 	_ "github.com/AlexBlackNn/authloyalty/cmd/sso/docs"
 	"github.com/AlexBlackNn/authloyalty/internal/config"
 	handlersV1 "github.com/AlexBlackNn/authloyalty/internal/handlersapi/v1"
@@ -28,17 +29,18 @@ func NewChiRouter(
 		httprate.WithKeyFuncs(httprate.KeyByIP, httprate.KeyByEndpoint),
 	))
 	router.Use(customMiddleware.Logger(log))
-	//router.Use(customMiddleware.GzipDecompressor(log))
-	//router.Use(customMiddleware.GzipCompressor(log, gzip.BestCompression))
 
 	router.Use(middleware.Recoverer)
 
 	router.Route("/auth", func(r chi.Router) {
+		r.Use(customMiddleware.GzipDecompressor(log))
+		r.Use(customMiddleware.GzipCompressor(log, gzip.BestCompression))
 		r.Get("/ready", healthHandlerV1.ReadinessProbe)
 		r.Get("/healthz", healthHandlerV1.LivenessProbe)
 		r.Post("/login", authHandlerV1.Login)
 		r.Post("/logout", authHandlerV1.Logout)
 		r.Post("/registration", authHandlerV1.Register)
+		r.Post("/refresh", authHandlerV1.Refresh)
 	})
 	router.Route("/", func(r chi.Router) {
 		r.Get("/swagger/*", httpSwagger.Handler(
